--- a/index.html
+++ b/index.html
@@ -61,5 +61,7 @@
         <li class="nav-3"><i class="fas fa-envelope"></i> Contact</li>
       </ul>
     </nav>
+
+    <script src="script.js"></script>
   </body>
 </html>
